@@ -45,7 +45,7 @@
               >Gallery</a
             >
             <a
-              href="https://www.github.com/MinhCreator"
+              href="https://github.com/MinhCreator/photo-gallery"
               class="text-gray-700 hover:text-blue-600 font-medium"
               target="_blank"
               >Github</a
