@@ -338,6 +338,7 @@
           class="max-w-3xl mx-auto mt-12 space-y-8 sm:space-y-0 sm:flex sm:items-center sm:justify-center sm:mt-16 sm:gap-x-16"
         >
           <!-- github logo -->
+          <a href="https://github.com/MinhCreator/photo-gallery" target="_blank">
           <div>
             <img
               class="w-auto mx-auto h-9"
@@ -345,8 +346,9 @@
               alt=""
             />
           </div>
-
+          </a>
           <!-- vercel logo -->
+          <!-- <a href="">
           <div>
             <img
               class="w-auto mx-auto h-30 object-cover"
@@ -354,8 +356,10 @@
               alt=""
             />
           </div>
+          </a> -->
 
           <!-- render logo -->
+          <a href="https://render.com/">
           <div>
             <svg
               width="110"
@@ -389,6 +393,8 @@
               ></path>
             </svg>
           </div>
+          </a>
+
         </div>
       </div>
     </section>
