@@ -1,3 +1,7 @@
+28/11/2025:
+    * vercel logo no longer used in home.html and readme.md
+    * added link render in home.html and change link github inside gallery.html
+
 04/07/2025:
     * removed image display animation 
     * removed home button in gallery.html
